fixed squashed graph

--- a/demos/differential-privacy/style.css
+++ b/demos/differential-privacy/style.css
@@ -63,13 +63,8 @@ body {
   height: 300px;
 }
 
-canvas {
-  width: 300;
-  height: 300;
-}
-
-.graphCanvas {
-  display:block;
-  width:300px;
-  height:300px;
-}
+/* not working
+ canvas {
+  width: 400;
+  height: 400;
+} */
